--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
-FROM nginx:1.24
-RUN rm -rf /usr/share/nginx/html/* 
+FROM nginx
+RUN rm -rf /usr/share/nginx/html/index.html 
 RUN rm -rf /etc/nginx/nginx.conf
 RUN rm -rf /etc/nginx/conf.d/default.conf
 COPY static/* /usr/share/nginx/html/
